clusters/home-lab-kubernetes-01/manifests/namespaces/istio-system/authorizationpolicy/podinfo-home-zufardhiyaulhaq-com-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: podinfo-home-zufardhiyaulhaq-com-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-public-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: 
        - podinfo.home.zufardhiyaulhaq.com*
